--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@tailwindcss/typography": "^0.5.2",
     "next": "latest",
+    "next-themes": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
