--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
+    "@mui/material": "^5.8.0",
     "@tailwindcss/typography": "^0.5.2",
     "next": "latest",
     "next-themes": "^0.2.0",
