--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.8.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/react-is": "^17.0.3",
+    "graphql": "^16.5.0",
     "next": "latest",
+    "next-auth": "^4.3.4",
     "next-themes": "^0.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
