--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/material": "^5.8.0",
     "@tailwindcss/typography": "^0.5.2",
     "@types/react-is": "^17.0.3",
+    "@uiball/loaders": "^1.2.6",
     "graphql": "^16.5.0",
     "next": "latest",
     "next-auth": "^4.3.4",
@@ -20,11 +21,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.2",
-    "react-hot-toast": "^2.2.0"
+    "react-hot-toast": "^2.2.0",
+    "react-timeago": "^6.2.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
+    "@types/react-timeago": "^4.1.3",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
